Remove `babel-plugin-inline-react-svg` from dev deps

--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,7 @@
 {
   "env": {
-    "development": {
-      "presets": ["next/babel"],
-      "plugins": [["inline-react-svg", { "svgo": false }]]
-    },
-    "production": {
-      "presets": ["next/babel"],
-      "plugins": [["inline-react-svg", { "svgo": false }]]
-    },
     "test": {
-      "presets": ["next/babel"],
-      "plugins": [["inline-react-svg", { "svgo": false }]]
+      "presets": ["next/babel"]
     }
   }
 }
